Project

General

Profile

Actions

Bug #3771

closed

VC++ can't make ext/tk with enabling stubs

Bug #3771: VC++ can't make ext/tk with enabling stubs

Added by arton (Akio Tajima) about 16 years ago. Updated over 15 years ago.

Status:
Closed
Assignee:
-
Target version:
ruby -v:
1.9.2p0 (2010-08-18) [i386-mswin32_100]
Backport:
[ruby-dev:42159]

Description

=begin
VC++で
--enable-tcltk-stubs を有効にしてmakeすると、tkのmakeに失敗します。
以下、パッチです。

--- stubs.c.org Tue Aug 31 16:21:44 2010
+++ stubs.c Tue Aug 31 16:21:55 2010
@@ -72,7 +72,7 @@
#if defined USE_TCL_STUBS && defined USE_TK_STUBS

#if defined _WIN32 || defined CYGWIN
-# include "util.h"
+# include "ruby/util.h"

include <windows.h>

typedef HINSTANCE DL_HANDLE;

define DL_OPEN LoadLibrary

=end

Actions

Also available in: PDF Atom