* ext/tk/stubs.c: fix [Bug #3771] "VC++ can't make ext/tk with enabling   stubs". Thanks, Akio Tajima [ruby-dev:42159].

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_8@29152 b2dd03c8-39d4-4d8f-98ff-823fe69b080e